:hammer: Add more users endpoints detail
