# public/swagger.json
@@ -25,6 +25,12 @@
           },
           "password": {
             "type": "string"
+          },
+          "createdAt": {
+            "type": "string"
+          },
+          "updatedAt": {
+            "type": "string"
           }
         },
         "required": ["username", "email", "password"],
@@ -37,6 +43,47 @@
       },
       "UserCreateRequest": {
         "$ref": "#/components/schemas/Omit_UserCreateResponse.id-or-isAdmin_"
+      },
+      "Pick_UserCreateResponse.Exclude_keyofUserCreateResponse.password__": {
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "isAdmin": {
+            "type": "boolean"
+          },
+          "username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string"
+          },
+          "updatedAt": {
+            "type": "string"
+          }
+        },
+        "required": ["id", "isAdmin", "username", "email"],
+        "type": "object",
+        "description": "From T, pick a set of properties whose keys are in the union K"
+      },
+      "Omit_UserCreateResponse.password_": {
+        "$ref": "#/components/schemas/Pick_UserCreateResponse.Exclude_keyofUserCreateResponse.password__",
+        "description": "Construct a type with the properties of T except for those in type K."
+      },
+      "UserDetail": {
+        "$ref": "#/components/schemas/Omit_UserCreateResponse.password_"
+      },
+      "NoContent": {
+        "properties": {
+          "delete": {
+            "type": "string"
+          }
+        },
+        "required": ["delete"],
+        "type": "object"
       }
     },
     "securitySchemes": {}
@@ -91,14 +138,7 @@
               "application/json": {
                 "schema": {
                   "items": {
-                    "properties": {
-                      "userId": {
-                        "type": "number",
-                        "format": "double"
-                      }
-                    },
-                    "required": ["userId"],
-                    "type": "object"
+                    "$ref": "#/components/schemas/UserDetail"
                   },
                   "type": "array"
                 }
@@ -120,14 +160,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "properties": {
-                    "userId": {
-                      "type": "number",
-                      "format": "double"
-                    }
-                  },
-                  "required": ["userId"],
-                  "type": "object"
+                  "$ref": "#/components/schemas/UserDetail"
                 }
               }
             }
@@ -141,8 +174,7 @@
             "name": "userId",
             "required": true,
             "schema": {
-              "format": "double",
-              "type": "number"
+              "type": "string"
             }
           }
         ]
@@ -157,8 +189,7 @@
                 "schema": {
                   "properties": {
                     "userId": {
-                      "type": "number",
-                      "format": "double"
+                      "type": "string"
                     }
                   },
                   "required": ["userId"],
@@ -176,8 +207,7 @@
             "name": "userId",
             "required": true,
             "schema": {
-              "format": "double",
-              "type": "number"
+              "type": "string"
             }
           }
         ]
@@ -190,14 +220,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "properties": {
-                    "userId": {
-                      "type": "number",
-                      "format": "double"
-                    }
-                  },
-                  "required": ["userId"],
-                  "type": "object"
+                  "$ref": "#/components/schemas/NoContent"
                 }
               }
             }
@@ -211,8 +234,7 @@
             "name": "userId",
             "required": true,
             "schema": {
-              "format": "double",
-              "type": "number"
+              "type": "string"
             }
           }
         ]
