# src/types/schemas/base.response.ts
@@ -1,0 +1,3 @@
+export type NoContent = {
+  delete: string;
+};
