# src/types/schemas/user.response.ts
@@ -4,7 +4,10 @@ export interface UserCreateResponse {
   email: string;
   password: string;
   isAdmin: boolean;
+  createdAt?: string;
+  updatedAt?: string;
 }
 
+export type UserDetail = Omit<UserCreateResponse, "password">;
 export type UserCreateRequest = Omit<UserCreateResponse, "id" | "isAdmin">;
 export type UserCreateAccessToken = { accessToken: string };
